<resources>
    <string name="app_name">NerdPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 菜单栏选项 -->
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_refresh">刷新</string>
    <string name="action_confirm">确认</string>
    <string name="action_delete">删除</string>
    <string name="action_follow">关注</string>
    <string name="action_cancel_follow">取消关注</string>

    <!--侧边栏选项-->
    <string name="online_video">在线观看</string>
    <string name="offline_video">本地视频</string>
    <string name="uploaded_video">已发布视频</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="about_us">关于</string>
    <string name="communicate">Communicate</string>


    <!-- 本地视频文件视图 -->
    <string name="show_all_dirs">所有文件夹</string>
    <string name="sort_by_dir">文件夹</string>
    <string name="show_all_files">文件</string>
    <string name="sort">排序</string>
    <string name="video_count">%1$s个视频</string>

    <!-- 标题 -->
    <string name="local_video">本地视频</string>


    <!-- 视频分类 -->
    <string name="technology">科技</string>
    <string name="comic">动漫</string>
    <string name="literature">文学</string>
    <string name="music">音乐</string>
    <string name="emotion">情感</string>
    <string name="dancing">舞蹈</string>
    <string name="exercise">运动</string>
    <string name="fashion">时尚</string>
    <string name="funny">娱乐</string>


    <!-- 首页页面 -->
    <string name="commend">推荐</string>
    <string name="billboard">排行榜</string>
    <string name="category">分类</string>
    <string name="dynamic">动态</string>


    <!-- 视频排行 -->
    <string name="billboard_no1">1.%1$s</string>
    <string name="billboard_no2">2.%1$s</string>
    <string name="billboard_no3">3.%1$s</string>
    <string name="billboard_no4">4.%1$s</string>
    <string name="billboard_no5">5.%1$s</string>
    <string name="billboard_no6">6.%1$s</string>
    <string name="billboard_no7">7.%1$s</string>
    <string name="billboard_no8">8.%1$s</string>
    <string name="billboard_no9">9.%1$s</string>
    <string name="billboard_no10">10.%1$s</string>

    <!-- 用户信息 -->
    <string name="password">密码</string>
    <string name="marks">简介</string>
    <string name="userName">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="email">电子邮箱</string>

    <!-- 其他 -->
    <string name="see_more">查看更多</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
