<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_online_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/online_video" />
        <item
            android:id="@+id/nav_upload_video"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/uploaded_video" />
        <item
            android:id="@+id/nav_offline_video"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/offline_video" />
        <!--<item-->
            <!--android:id="@+id/nav_message"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="@string/message" />-->
    </group>

    <item android:title="about NerdPlayer">
        <menu>
            <!--<item-->
                <!--android:id="@+id/nav_setting"-->
                <!--android:icon="@drawable/ic_menu_manage"-->
                <!--android:title="@string/setting" />-->
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
