<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/component_video_online_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_billboard_category_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/category_funny_48"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/tv_billboard_no1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/billboard_no1"
                />
            <TextView
                android:id="@+id/tv_billboard_no2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/billboard_no2"
                />
            <TextView
                android:id="@+id/tv_billboard_no3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/billboard_no3"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>