<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/list_item_margin_default"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_margin_default"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:text="主要资料"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_user_info"
                android:textColor="@color/pure_black"
                android:padding="@dimen/activity_default_margin"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/edit_gray_48"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color"/>

        <!-- 昵称 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_use_info_default"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userName"
                android:textSize="@dimen/font_user_info_tip"
                android:textColor="@color/pure_black"
                />
            <TextView
                android:id="@+id/tv_user_info_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="韩战"
                android:textSize="@dimen/font_user_info_tip"
                />
        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_use_info_default"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="@dimen/font_user_info_tip"
                android:textColor="@color/pure_black"
                />
            <TextView
                android:id="@+id/tv_user_info_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="helloworld@xx.com"
                android:textSize="@dimen/font_user_info_tip"
                />
        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_use_info_default"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birthday"
                android:textSize="@dimen/font_user_info_tip"
                android:textColor="@color/pure_black"
                />
            <TextView
                android:id="@+id/tv_user_info_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="1993-12-12"
                android:textSize="@dimen/font_user_info_tip"
                />
        </LinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_use_info_default"
            >
            <TextView
                android:id="@+id/tv_user_info_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="@dimen/font_user_info_tip"
                android:textColor="@color/pure_black"
                />
            <TextView
                android:id="@+id/tv_user_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="******"
                android:textSize="@dimen/font_user_info_tip"
                />
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
